// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Login /> Renders properly 1`] = `
<div
  className="right menu"
>
  <div
    className="item"
    onClick={[Function]}
  >
    Signup
  </div>
  <div
    className="item"
    onClick={[Function]}
  >
    Login
  </div>
</div>
`;

exports[`<LoginModal /> Renders properly 1`] = `
<div
  className="item"
  onClick={[Function]}
>
  Login
</div>
`;

exports[`<SignupModal /> Renders properly 1`] = `
<div
  className="item"
  onClick={[Function]}
>
  Signup
</div>
`;
